[project]
name = "scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geoarrow-pandas>=0.1.1",
    "geoarrow-pyarrow>=0.1.2",
    "geoarrow-rust>=0.1.0",
    "geopandas>=1.0.1",
    "lonboard>=0.10.3",
    "marimo>=0.11.0",
    "pandas>=2.2.3",
    "pyarrow>=19.0.0",
]
